maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:16: error: missing parameter type for expanded function ((x$1) => facing.<$amp$amp: error>(x$1))
  if (facing && _){
                ^