maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  while (!isOverBaggle()){
    keepHandOnSideWall()
		forward()
  }
}



def keepHandOnSideWall(){
	var facing = isFacingWall()
  left()
  var _ = isFacingWall()
  
  if (facing && _){
    right()
    right()
  }else if(facing){
    left()
  }
}